Add Ultimarc Ultimate I/O support, currently hardcoded to drive a real Baby Pac-Man machine (see core.c (update_hW()) and pacdrive.c to configure for other setups!)
(use new command line option 'ultimateio' to enable it)


Version 2.6 (X X, 2015) - "We're not dead (yet)"
------------------------------------------------------------------------------

*** CORE/CPU ***
Set DCS sample rate to 31,250 Hz, fixes most DCS sound issues
Optimization to DCS sound decoding for 1993-era games (STTNG, IJ, JD)
(Optional) Separate RGB-Color selection for the 4 DMD shades
Added driver for MAC / CICPlay games
Correct display outputs on IDSA
Slight digits correction for Papillon
Different display handling for Tecnoplay "Space Team"
Added Y8950 sound for Tecnoplay games and Astrocade sound for Midway's Rotation VIII
Corrected Atari gen.1 & gen.2 sound (so make sure you have the 82s130.bin in the ROM set)
Fixed display width for Black Belt (Squawk and Talk)
Some fixes for Midnight Marauders
Corrected CPU clock, RIOT speed, displays for GTS80B
Corrected GTS80 SS sound clock
Cured scratchy GTS80 sound after reset
Corrected DMD for Strikes n' Spares
Added new chirp table & reverb for TMS5200 (Bally Centaur, etc) (so make sure to delete an existing nvram of centaur)
Made some Inder games sound a lot nicer then before and adjusted music / speech pitch for Metal Man
Tweak CPU clock for Mystery Castle to make it look more correct
Fixed single zero digit on Odin & Odin Deluxe
Tweak IRQ4 frequency for Kingpin & Flipper Football (slightly improves lamp issues)
Improve Speech on Nuova Bell and Jeutel games
Fix some/most of the general sound stutter issues by improving the throttle code
Improve performance for all ARM7 based games (e.g. Whitestar II)
Updated to zlib 1.2.8

*** ROM SUPPORT *** Thanks to John Lundy, Inkochnito, John Wart Jr, Mitch, John Crawford, Kelley, Juan, PinKitty & Tim Polzin
New:
Atari: 4x4 (not working yet)
CICPlay: Galaxy Play
Data East: King Kong 1.0